--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SXAPI - Main</title>
 </head>
 <body>
-    <h1>SXAPI</h1>
-    <h6>SXAPI'ye hoş geldiniz!</h6>
+    <h1 id="baslik">SXLANTE API GTFT</h1>
+    <p>Merhaba!</p>
 </body>
 </html>
