Rename header ID from 'baslik' to 'ana-baslik'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SXAPI - Main</title>
 </head>
 <body>
-    <h1 id="baslik">SXLANTE API GTFT</h1>
+    <h1 id="ana-baslik">SXLANTE API GTFT</h1>
     <p>Merhaba!</p>
 </body>
 </html>
