--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SXAPI - Main</title>
+    <title>Sxlante Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="ana-baslik">SXLANTE API GTFT</h1>
-    <p>Merhaba!</p>
+
+    <div class="container">
+        <h1 id="ana-baslik">Sxlante API</h1>
+        
+        <div class="card">
+            <p>Sistem Durumu: <span class="status">Aktif</span></p>
+            <p>İşlemci: Pentium B960</p>
+            <button id="apiBtn">API'den Veri Çek</button>
+            <p id="sonuc"></p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
