--- a/index.html
+++ b/index.html
@@ -7,17 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="container">
-        <h1 id="ana-baslik">Sxlante API</h1>
-        
-        <div class="card">
-            <p>Sistem Durumu: <span class="status">Aktif</span></p>
-            <p>İşlemci: Pentium B960</p>
-            <button id="apiBtn">API'den Veri Çek</button>
-            <p id="sonuc"></p>
-        </div>
-    </div>
+    <h1 id="ana-baslik">    SXLANTE API</h1>
+    <h5>bu bi h5 dir</h5>
 
     <script src="script.js"></script>
 </body>
