--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sxlante API </title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+  background-color: lightblue;
+}
+    </style>
 </head>
 <body>
     <h1>SXLANTE API</h1>
