--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>SXLANTE API</h1>
+    <h1 id="ana-baslik">SXLANTE API</h1>
     <h5>bu bi h5 dir</h5>
 
     <script src="script.js"></script>
