--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="ana-baslik">SXLANTE API</h1>
-    <h5>bu bi h5 dir</h5>
+    <h5>Selam. Ben sxlante. Namıdeğer Berat. Burada kendi yaptığım API Servislerini paylaşıyorum.</h5>
 
     <script src="script.js"></script>
 </body>
